--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,9 @@
         android:text="@string/main_top_label"
         android:textColor="@color/black"
         android:textSize="16sp"
+        app:autoSizeMaxTextSize="20sp"
+        app:autoSizeMinTextSize="14sp"
+        app:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="@id/dDayTextView"
         app:layout_constraintEnd_toStartOf="@id/dDayTextView"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -32,6 +35,9 @@
         android:textColor="@color/main_color"
         android:textSize="30sp"
         android:textStyle="bold"
+        app:autoSizeMaxTextSize="36sp"
+        app:autoSizeMinTextSize="28sp"
+        app:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/labelDDayTextView"
         app:layout_constraintTop_toTopOf="parent"
@@ -73,6 +79,9 @@
                 android:autoSizeMaxTextSize="16dp"
                 android:background="@color/white"
                 android:paddingHorizontal="8dp"
+                app:autoSizeMaxTextSize="18sp"
+                app:autoSizeMinTextSize="12sp"
+                app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -96,9 +105,14 @@
                 android:autoSizeMaxTextSize="18dp"
                 android:background="@color/white"
                 android:paddingHorizontal="8dp"
-                android:text="각오"
+                android:text="@string/my_resolution"
+                android:textColor="@color/dark_grey"
                 android:textSize="15sp"
+                android:textStyle="bold"
                 android:translationY="-8dp"
+                app:autoSizeMaxTextSize="18sp"
+                app:autoSizeMinTextSize="14sp"
+                app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="@id/myResolutionView"
                 app:layout_constraintStart_toStartOf="@id/myResolutionView"
                 app:layout_constraintTop_toTopOf="@+id/myResolutionView" />
@@ -112,13 +126,16 @@
                 android:gravity="center"
                 android:maxLines="2"
                 android:padding="12dp"
-                android:text="각오합시다각오합시다각오합시다각오합시다"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                app:autoSizeMaxTextSize="18sp"
+                app:autoSizeMinTextSize="14sp"
+                app:autoSizeTextType="uniform"
                 app:layout_constraintBottom_toBottomOf="@id/myResolutionView"
                 app:layout_constraintEnd_toEndOf="@id/myResolutionView"
                 app:layout_constraintStart_toStartOf="@id/myResolutionView"
-                app:layout_constraintTop_toTopOf="@+id/myResolutionView" />
+                app:layout_constraintTop_toTopOf="@+id/myResolutionView"
+                tools:text="각오합시다각오합시다각오합시다각오합시다" />
 
 
             <View
@@ -139,9 +156,14 @@
                 android:autoSizeMaxTextSize="18dp"
                 android:background="@color/white"
                 android:paddingHorizontal="8dp"
-                android:text="안피운 담배"
+                android:text="@string/un_smoked_cigarettes"
+                android:textColor="@color/dark_grey"
                 android:textSize="15sp"
+                android:textStyle="bold"
                 android:translationY="-8dp"
+                app:autoSizeMaxTextSize="18sp"
+                app:autoSizeMinTextSize="14sp"
+                app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="@id/cigarettesSavedView"
                 app:layout_constraintStart_toStartOf="@id/cigarettesSavedView"
                 app:layout_constraintTop_toTopOf="@+id/cigarettesSavedView" />
@@ -155,6 +177,9 @@
                 android:padding="12dp"
                 android:textSize="18sp"
                 android:textStyle="bold"
+                app:autoSizeMaxTextSize="20sp"
+                app:autoSizeMinTextSize="14sp"
+                app:autoSizeTextType="uniform"
                 app:layout_constraintBottom_toBottomOf="@id/cigarettesSavedView"
                 app:layout_constraintEnd_toEndOf="@id/cigarettesSavedView"
                 app:layout_constraintStart_toStartOf="@id/cigarettesSavedView"
@@ -180,9 +205,14 @@
                 android:autoSizeMaxTextSize="18dp"
                 android:background="@color/white"
                 android:paddingHorizontal="8dp"
-                android:text="늘어난 수명"
+                android:text="@string/increased_lifespan"
+                android:textColor="@color/dark_grey"
                 android:textSize="15sp"
+                android:textStyle="bold"
                 android:translationY="-8dp"
+                app:autoSizeMaxTextSize="18sp"
+                app:autoSizeMinTextSize="14sp"
+                app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="@id/increasedLifespanView"
                 app:layout_constraintStart_toStartOf="@id/increasedLifespanView"
                 app:layout_constraintTop_toTopOf="@+id/increasedLifespanView" />
@@ -196,6 +226,9 @@
                 android:padding="12dp"
                 android:textSize="18sp"
                 android:textStyle="bold"
+                app:autoSizeMaxTextSize="20sp"
+                app:autoSizeMinTextSize="14sp"
+                app:autoSizeTextType="uniform"
                 app:layout_constraintBottom_toBottomOf="@id/increasedLifespanView"
                 app:layout_constraintEnd_toEndOf="@id/increasedLifespanView"
                 app:layout_constraintStart_toStartOf="@id/increasedLifespanView"
@@ -222,8 +255,13 @@
                 android:background="@color/white"
                 android:paddingHorizontal="8dp"
                 android:text="@string/save_money"
+                android:textColor="@color/dark_grey"
                 android:textSize="15sp"
+                android:textStyle="bold"
                 android:translationY="-8dp"
+                app:autoSizeMaxTextSize="18sp"
+                app:autoSizeMinTextSize="14sp"
+                app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="@id/saveMoneyView"
                 app:layout_constraintStart_toStartOf="@id/saveMoneyView"
                 app:layout_constraintTop_toTopOf="@+id/saveMoneyView" />
@@ -237,6 +275,9 @@
                 android:padding="12dp"
                 android:textSize="18sp"
                 android:textStyle="bold"
+                app:autoSizeMaxTextSize="20sp"
+                app:autoSizeMinTextSize="14sp"
+                app:autoSizeTextType="uniform"
                 app:layout_constraintBottom_toBottomOf="@id/saveMoneyView"
                 app:layout_constraintEnd_toEndOf="@id/saveMoneyView"
                 app:layout_constraintStart_toStartOf="@id/saveMoneyView"
@@ -250,7 +291,10 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
                 android:text="@string/stop_smoking_share_friends"
-                app:cornerRadius="16dp"
+                app:autoSizeMaxTextSize="14sp"
+                app:autoSizeMinTextSize="12sp"
+                app:autoSizeTextType="uniform"
+                app:cornerRadius="18dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -317,7 +361,10 @@
             android:text="@string/stop_smoking_after_body_changes"
             android:textColor="@color/white"
             android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:autoSizeMaxTextSize="20sp"
+            app:autoSizeMinTextSize="14sp"
+            app:autoSizeTextType="uniform" />
 
     </LinearLayout>
 
@@ -328,7 +375,6 @@
         android:layout_marginStart="4dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/rounded_main_color"
-        android:backgroundTint="@android:color/darker_gray"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@id/bodyChangesLayout"
@@ -352,7 +398,10 @@
             android:text="@string/chat"
             android:textColor="@color/white"
             android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:autoSizeMaxTextSize="20sp"
+            app:autoSizeMinTextSize="14sp"
+            app:autoSizeTextType="uniform" />
 
     </LinearLayout>
 
