--- a/app/src/main/res/drawable/rounded_main_color_blur.xml
+++ b/app/src/main/res/drawable/rounded_main_color_blur.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <stroke android:width="2.5dp" android:color="@color/main_color" />
-    <corners android:radius="16dp" />
+    <solid android:color="@color/main_color_blur" />
+    <corners android:radius="32dp" />
 
 </shape>
