--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="category_array">
+        <item>모두</item>
+        <item>금연 성공담</item>
+        <item>금연 실패담</item>
+        <item>잡담</item>
+    </string-array>
+
+    <string-array name="category_array_write">
         <item>금연 성공담</item>
         <item>금연 실패담</item>
         <item>잡담</item>
