--- a/app/src/main/res/layout/activity_body_changes.xml
+++ b/app/src/main/res/layout/activity_body_changes.xml
@@ -28,7 +28,7 @@
         android:layout_height="28dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="24dp"
-        android:background="@drawable/ic_baseline_cancel_24"
+        android:background="@drawable/ic_cancel_24"
         android:backgroundTint="@color/main_color"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
