--- a/app/src/main/res/layout/activity_community_detail.xml
+++ b/app/src/main/res/layout/activity_community_detail.xml
@@ -12,7 +12,7 @@
         android:layout_height="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        android:background="@drawable/ic_baseline_cancel_24"
+        android:background="@drawable/ic_cancel_24"
         android:backgroundTint="@color/main_color"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
