--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -326,7 +326,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="6dp"
-            android:background="@drawable/ic_baseline_edit_24"
+            android:background="@drawable/ic_edit_24"
             android:backgroundTint="@color/main_color" />
 
     </androidx.cardview.widget.CardView>
@@ -351,7 +351,7 @@
             android:layout_height="32dp"
             android:layout_gravity="center_vertical"
             android:layout_marginEnd="8dp"
-            android:background="@drawable/ic_baseline_accessibility_new_24"
+            android:background="@drawable/ic_accessibility_new_24"
             android:backgroundTint="@color/white" />
 
         <TextView
@@ -387,7 +387,7 @@
             android:layout_height="32dp"
             android:layout_gravity="center_vertical"
             android:layout_marginEnd="8dp"
-            android:background="@drawable/ic_baseline_forum_24"
+            android:background="@drawable/ic_forum_24"
             android:backgroundTint="@color/white" />
 
         <TextView
