--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -30,7 +30,7 @@
         android:layout_height="32dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:background="@drawable/ic_baseline_cancel_24"
+        android:background="@drawable/ic_cancel_24"
         android:backgroundTint="@color/main_color"
         android:elevation="6dp"
         android:gravity="center"
